--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Web Page</title>
+    <title>Training Form</title>
 </head>
 <body>
-    <h1>Welcome to my web page!</h1>
-    
-    <form method="post" action="/">
-        <input type="text" name="data" placeholder="Enter data">
-        <button type="submit">Submit</button>
+    <h1>Training Form</h1>
+    <form action="/submit" method="post">
+        <label for="emp_number">Employee Number:</label>
+        <input type="number" id="emp_number" name="emp_number" required>
+
+        <br><br>
+
+        <label for="training_id">Training ID:</label>
+        <input type="text" id="training_id" name="training_id" required>
+
+        <br><br>
+
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" value="{{ current_date }}" required>
+
+        <br><br>
+
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
+
