html page updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Training Form</h1>
-    <form action="/submit" method="post">
+    <form action="/" method="post">
         <label for="emp_number">Employee Number:</label>
         <input type="number" id="emp_number" name="emp_number" required>
 
