--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Training Form</title>
     <style>
         body {
-            background-image: url("p3.jpg");
+            background-image: url("images/p3.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
