--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Training Form</title>
     <style>
         body {
-            background-image: url("templates/images/p3.jpg");
+            background-image: url("{{ url_for('static', filename='images/p3.jpg') }}");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
